- improved APNG support   .frm frames offset are properly applied to created .png   final image size matches frames positions and size   software *not* supporting APNG will display "preview" image, which   is centered copy of first frame; in other case preview is ignored - extracted code handling Fallout formats from falltergeist repository   see src/libfalltergeist-mini/   replaces old code which didn't support all .frm properties   introduces useful few which makes working on application little   easier and/or can be useful in future - disconnected PngImage from Fallout-related classes - application compiled in harsh mode on *nix   -Wall, -Werror, -Wextra, -Wpedantic enabled if supported by compiler - removed CMakeLists from root directory to avoid confusion

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,35 +7,72 @@ set( CMAKE_CONFIGURATION_TYPES    "Release" )
 set( CMAKE_CXX_STANDARD           11 )
 set( CMAKE_CXX_STANDARD_REQUIRED  YES )
 
+# prevent any dependencies from running any install-related stuff
 set( CMAKE_SKIP_INSTALL_RULES     TRUE )
 macro( install )
 endmacro()
 
-set( ZLIB_LIBRARY      zlibstatic )
-add_subdirectory( png  EXCLUDE_FROM_ALL )
-add_subdirectory( zlib EXCLUDE_FROM_ALL )
+# strict compilation
+function( frm2png_target target )
+	if( UNIX )
+		set( CMAKE_BUILD_TYPE RelWithDebInfo )
+
+		include( CheckCXXCompilerFlag )
+		check_cxx_compiler_flag( -Wall      COMPILER_FLAG_WALL )
+		check_cxx_compiler_flag( -Werror    COMPILER_FLAG_WERROR )
+		check_cxx_compiler_flag( -Wextra    COMPILER_FLAG_WEXTRA )
+		check_cxx_compiler_flag( -Wpedantic COMPILER_FLAG_WPEDANTIC )
+
+		if( COMPILER_FLAG_WALL )
+			target_compile_options( ${target} PRIVATE -Wall )
+		endif()
+		if( COMPILER_FLAG_WERROR )
+			target_compile_options( ${target} PRIVATE -Werror )
+		endif()
+		if( COMPILER_FLAG_WEXTRA )
+			target_compile_options( ${target} PRIVATE -Wextra )
+		endif()
+		if( COMPILER_FLAG_WPEDANTIC )
+			target_compile_options( ${target} PRIVATE -Wpedantic )
+		endif()
+
+		check_cxx_compiler_flag( -static-libgcc    COMPILER_FLAG_STATIC_LIBGCC )
+		check_cxx_compiler_flag( -static-libstdc++ COMPILER_FLAG_STATIC_LIBSTDCPP )
+
+		if( COMPILER_FLAG_STATIC_LIBGCC )
+			target_link_libraries( ${target} PRIVATE -static-libgcc )
+		endif()
+		if( COMPILER_FLAG_STATIC_LIBSTDCPP )
+			target_link_libraries( ${target} PRIVATE -static-libstdc++ )
+		endif()
+	endif()
+endfunction()
+
+# prevent libpng from searching for zlib, as it most likely will find one installed on system
+# this should be replaced with tweaking CMP0079 and using target_link_libraries() after switching to cmake 3.13 or newer
+set( ZLIB_LIBRARY zlibstatic )
+
+add_subdirectory( libfalltergeist-mini EXCLUDE_FROM_ALL )
+add_subdirectory( png                  EXCLUDE_FROM_ALL )
+add_subdirectory( zlib                 EXCLUDE_FROM_ALL )
+
 
 add_executable( frm2png "" )
 target_sources( frm2png
 	PRIVATE
 		main.cpp
 
-		Color.cpp
-		Color.h
+		ColorPal.cpp
+		ColorPal.h
 		Exception.cpp
 		Exception.h
-		FalloutFile.cpp
-		FalloutFile.h
-		FrmFalloutFile.cpp
-		FrmFalloutFile.h
-		FrmFrame.cpp
-		FrmFrame.h
 		PngImage.cpp
 		PngImage.h
 		PngWriter.cpp
 		PngWriter.h
-		pallete.h
 )
 
-target_include_directories( frm2png PRIVATE png )
-target_link_libraries( frm2png PRIVATE png_static )
+target_include_directories( frm2png PRIVATE libfalltergeist-mini png )
+target_link_libraries( frm2png PRIVATE png_static falltergeist-mini )
+
+frm2png_target( frm2png )
