--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
-[submodule "libpng"]
-	path = src/png
+[submodule "libpng-apng"]
+	path = src/libpng-apng
 	url = https://git.code.sf.net/p/libpng-apng/code
 	branch = libpng16
 [submodule "zlib"]
