--- a/Source/libfalltergeist-mini/CMakeLists.txt
+++ b/Source/libfalltergeist-mini/CMakeLists.txt
@@ -31,9 +31,10 @@ target_sources( falltergeist-mini
 		Format/Pal/File.cpp
 )
 
-if( NOT DIR_ZLIB_BINARY OR NOT DIR_ZLIB_SOURCE )
-	message( FATAL_ERROR "zlib directories not set" )
+if( NOT ZLIB_INCLUDE_DIR )
+	message( FATAL_ERROR "ZLIB_INCLUDE_DIR not set" )
 endif()
 
-target_include_directories( falltergeist-mini PRIVATE ${DIR_ZLIB_BINARY} ${DIR_ZLIB_SOURCE} )
+target_include_directories( falltergeist-mini PRIVATE "${ZLIB_INCLUDE_DIR}" )
 target_link_libraries( falltergeist-mini PRIVATE zlibstatic )
+frm2png_target( falltergeist-mini )
