- added command line handling   handled by https://github.com/muellan/clipp/   stub; some options are not handled correctly or don't work at all - added command line option --pal/-p   allows to select .pal file - added command line option --palette/-P   allows to select embedded palette (only 'default' available now) - added command line option --generator/-g   allows to select method used to create .png file(s)   stub; only 'apng' can be selected - added command line option --verbose/-V - added command line options --help/--version - any use of Exception class replaced with std::runtime_error - Png* classes throws bit more exceptions when used incorrectly - [falltergeist] removed Frm::File::rgba(), Frm::File::mask() - [falltergeist] tweaked functions to find max frame width/height - various tweaks and cleanups everywhere

--- a/.gitmodules
+++ b/.gitmodules
@@ -6,3 +6,7 @@
 	path = Source/zlib
 	url = https://github.com/madler/zlib.git
 	branch = master
+[submodule "clipp"]
+	path = Source/Source/clipp
+	url = https://github.com/muellan/clipp.git
+	branch = master
