--- a/.gitmodules
+++ b/.gitmodules
@@ -7,6 +7,6 @@
 	url = https://github.com/madler/zlib.git
 	branch = master
 [submodule "clipp"]
-	path = Source/Source/clipp
+	path = Source/clipp
 	url = https://github.com/muellan/clipp.git
 	branch = master
